--- a/group3.html
+++ b/group3.html
@@ -932,7 +932,7 @@
               <div class="col medium-12 small-12 large-6">
                 <div class="col-inner">
                   <div class="video video-fit mb" style="padding-top:56.25%;">
-                    <p><iframe width="1020" height="765" src="https://www.youtube.com/embed/Xb9FXJy4SYU?feature=oembed"
+                    <p><iframe width="1020" height="765" src="https://www.youtube.com/embed/3aqNZCASp2Q?feature=oembed"
                         frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></p>
                   </div>
                 </div>
