change text ngoc trinh

--- a/group3.html
+++ b/group3.html
@@ -1443,11 +1443,10 @@
                           </div>
                           <div
                             class="testimonial-text line-height-small italic test_text first-reset last-reset is-italic">
-                            <p>Linh thường làm việc nhiều nên da cũng ít tươi nhưng sau khi trải nghiệm dịch vụ tại
-                              Orient Cống Quỳnh, Linh cảm thấy rất hài lòng. Bác sĩ Orient khám da và tư vấn Linh rất
-                              chuyên nghiệp và tận tình. Hướng dẫn Linh cách chăm sóc da đúng cách. Giờ đây, Linh có
-                              thói quen chăm sóc da tại Orient 1 lần/tuần để giữ làn da tươi tắn khi lên hình. Linh rất
-                              yên tâm khi lựa chọn Orient làm nơi chăm sóc cho da của mình.</p>
+                            <p>
+                              Ngọc Trinh là một gương mặt được xuất hiện nhiều trên các báo chí.Cô được mệnh danh là "Nữ hoàng nội y"
+                              nên việc chăm sóc cơ thể vô cùng kỹ lưỡng.Cơ sở HACOSPA chúng tôi là sự lựa hàng đầu cho các gương mặt
+                              nổi bật tại Việt Nam và Ngọc Trinh là một trong những gương mặt điển hình .</p>
                           </div>
                           <div class="testimonial-meta pt-half">
                             <strong class="testimonial-name test_name">Ngọc Trinh</strong>
