--- a/group3.html
+++ b/group3.html
@@ -530,31 +530,31 @@
                 <!-- <li id="menu-item-22" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-22"><a href="#" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Giới thiệu</span></a></li> -->
                 <li id="menu-item-236"
                   class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children  menu-item-236 has-dropdown">
-                  <a href="#" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Dịch
+                  <a href="#dichvu" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Dịch
                       vụ</span></a>
                   <ul class='nav-dropdown nav-dropdown-simple'>
                     <li id="menu-item-237"
-                      class="menu-item menu-item-type-taxonomy menu-item-object-category  menu-item-237"><a href="#"
+                      class="menu-item menu-item-type-taxonomy menu-item-object-category  menu-item-237"><a href="#dichvu"
                         class="menu-image-title-after"><span class="menu-image-title">Điều trị da</span></a></li>
                     <li id="menu-item-239"
-                      class="menu-item menu-item-type-taxonomy menu-item-object-category  menu-item-239"><a href="#"
+                      class="menu-item menu-item-type-taxonomy menu-item-object-category  menu-item-239"><a href="#dichvu"
                         class="menu-image-title-after"><span class="menu-image-title">Chăm sóc da</span></a></li>
                     <li id="menu-item-238"
-                      class="menu-item menu-item-type-taxonomy menu-item-object-category  menu-item-238"><a href="#"
+                      class="menu-item menu-item-type-taxonomy menu-item-object-category  menu-item-238"><a href="#dichvu"
                         class="menu-image-title-after"><span class="menu-image-title">Thẩm mỹ không phẫu
                           thuật</span></a></li>
                     <li id="menu-item-240"
-                      class="menu-item menu-item-type-taxonomy menu-item-object-category  menu-item-240"><a href="#"
+                      class="menu-item menu-item-type-taxonomy menu-item-object-category  menu-item-240"><a href="#dichvu"
                         class="menu-image-title-after"><span class="menu-image-title">Spa thư giãn</span></a></li>
                   </ul>
                 </li>
                 <li id="menu-item-267" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-267">
-                  <a href="#" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Bác
+                  <a href="#bacsi" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Bác
                       sĩ</span></a>
                 </li>
                 <!-- <li id="menu-item-54" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-54"><a href="#" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Sản phẩm</span></a></li> -->
                 <li id="menu-item-25" class="menu-item menu-item-type-taxonomy menu-item-object-category  menu-item-25">
-                  <a href="#" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Tin
+                  <a href="#tintuc" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Tin
                       tức</span></a>
                 </li>
                 </li>
@@ -632,12 +632,12 @@
           </style>
         </section>
         <section class="section sec_service" id="section_611810207">
-          <div class="section-content relative">
+          <div class="section-content relative" >
             <div class="gap-element" style="display:block; height:auto; padding-top:70px" class="clearfix"></div>
             <div class="row row-small" id="row-42977553">
               <div class="col small-12 large-12">
                 <div class="col-inner text-center">
-                  <h3 class="mona_title">DỊCH VỤ HACOSPA SKINCARE</h3>
+                  <h3 class="mona_title" id="dichvu">DỊCH VỤ HACOSPA SKINCARE</h3>
                 </div>
               </div>
             </div>
@@ -788,7 +788,7 @@
             </div>
           </div><!-- .section-content -->
         </section>
-        <div class="row row-collapse" id="row-389463407">
+        <div class="row row-collapse" id="row-389463407" id="bacsi">
           <div class="col hide-for-medium small-12 large-12">
             <div class="col-inner">
               <div class="gap-element" style="display:block; height:auto; padding-top:120px" class="clearfix"></div>
@@ -800,7 +800,7 @@
             <div class="row row-collapse" id="row-1608200764">
               <div class="col small-12 large-12">
                 <div class="col-inner text-center" style="margin:30px 0px 0px 0px;">
-                  <h3 class="mona_title">ĐỘI NGŨ BÁC SĨ</h3>
+                  <h3 class="mona_title" id="bacsi">ĐỘI NGŨ BÁC SĨ</h3>
                 </div>
               </div>
             </div>
@@ -924,7 +924,7 @@
             <div class="row row-small" id="row-643577503">
               <div class="col small-12 large-12">
                 <div class="col-inner text-center">
-                  <h3 class="mona_title">THÔNG TIN HACO SKINCARE</h3>
+                  <h3 class="mona_title" id="tintuc">THÔNG TIN HACO SKINCARE</h3>
                 </div>
               </div>
             </div>
@@ -1834,5 +1834,5 @@
   <script type='text/javascript' src='js/hoverInstance.js'></script>
 
   <script type='text/javascript' src='js/flatsome.js'></script>
-
+  
 </html>
