--- a/group3.html
+++ b/group3.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="profile" href="https://gmpg.org/xfn/11" />
   <link rel="pingback" href="http://mauweb.monamedia.net/orientskin/xmlrpc.php" />
+  <link rel = "icon" href = "img/haco.png" type = "image/x-icon"> 
   <title>HACOSPA</title>
   <link rel='dns-prefetch' href='//mauweb.monamedia.net' />
   <link rel='dns-prefetch' href='//cdn.jsdelivr.net' />
