--- a/group3.html
+++ b/group3.html
@@ -555,8 +555,7 @@
                 </li>
                 <!-- <li id="menu-item-54" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-54"><a href="#" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Sản phẩm</span></a></li> -->
                 <li id="menu-item-25" class="menu-item menu-item-type-taxonomy menu-item-object-category  menu-item-25">
-                  <a href="#tintuc" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Tin
-                      tức</span></a>
+                  <a href="#tintuc" class="menu-image-title-after nav-top-link"><span class="menu-image-title">Thông tin</span></a>
                 </li>
                 </li>
               </ul>
@@ -638,7 +637,7 @@
             <div class="row row-small" id="row-42977553">
               <div class="col small-12 large-12">
                 <div class="col-inner text-center">
-                  <h3 class="mona_title" id="dichvu">DỊCH VỤ HACOSPA SKINCARE</h3>
+                  <h3 class="mona_title" id="dichvu">DỊCH VỤ HACOSPA</h3>
                 </div>
               </div>
             </div>
@@ -821,8 +820,8 @@
                           <div class="page-box box has-hover box-push">
                             <div class="box-image" style="width:75%;">
                               <div class="box-image">
-                                <img width="270" height="385" src="#" class="attachment-original size-original" alt=""
-                                  srcset="#" />
+                                <img width="270" height="385" src="img/hieu.png" class="attachment-original size-original" alt=""
+                                  srcset="img/hieu.png" />
                               </div><!-- image -->
                             </div><!-- box-image -->
                             <div class="box-text text-center is-large"
@@ -842,8 +841,8 @@
                           <div class="page-box box has-hover box-push">
                             <div class="box-image" style="width:75%;">
                               <div class="box-image">
-                                <img width="270" height="385" src="#" class="attachment-original size-original" alt=""
-                                  srcset="#" />
+                                <img width="270" height="385" src="img/anh.png" class="attachment-original size-original" alt=""
+                                  srcset="img/anh.png" />
                               </div><!-- image -->
                             </div><!-- box-image -->
                             <div class="box-text text-center is-large"
@@ -862,8 +861,8 @@
                           <div class="page-box box has-hover box-push">
                             <div class="box-image" style="width:75%;">
                               <div class="box-image">
-                                <img width="270" height="385" src="#" class="attachment-original size-original" alt=""
-                                  srcset="#" />
+                                <img width="270" height="385" src="img/cong.png" class="attachment-original size-original" alt=""
+                                  srcset="img/cong.png" />
                               </div><!-- image -->
                             </div><!-- box-image -->
                             <div class="box-text text-center is-large"
@@ -882,8 +881,8 @@
                           <div class="page-box box has-hover box-push">
                             <div class="box-image" style="width:75%;">
                               <div class="box-image">
-                                <img width="270" height="385" src="#" class="attachment-original size-original" alt=""
-                                  srcset="#" />
+                                <img width="270" height="385" src="img/hai.png" class="attachment-original size-original" alt=""
+                                  srcset="img/hai.png" />
                               </div><!-- image -->
                             </div><!-- box-image -->
                             <div class="box-text text-center is-large"
@@ -925,7 +924,7 @@
             <div class="row row-small" id="row-643577503">
               <div class="col small-12 large-12">
                 <div class="col-inner text-center">
-                  <h3 class="mona_title" id="tintuc">THÔNG TIN HACO SKINCARE</h3>
+                  <h3 class="mona_title" id="tintuc">THÔNG TIN HACOSPA</h3>
                 </div>
               </div>
             </div>
