--- a/group3.html
+++ b/group3.html
@@ -1800,7 +1800,7 @@
   </div><!-- #mobile-menu -->
   <!-- FB Messenger -->
   <div id="fbMsg">
-    <img data-remodal-target="fb-messenger" src="fb-messenger.png">
+    <img data-remodal-target="fb-messenger" src="img/fb-messenger.png">
   </div>
 
   <div class="remodal" data-remodal-id="fb-messenger">
